@@ -84,11 +84,14 @@ check_data (void)
     {  "1",  0.0,  1,  1 },
     { "-1",  0.0, -1,  1 },
 
+    {  "1",  0.5,  1,  1 },
+    { "-1", -0.5, -1,  1 },
+
     {  "0",  1.0, -1, -1 },
     {  "0", -1.0,  1, -1 },
 
-    {  "0x1000000000000000000000000000000000000000000000000", 0.0,  1, 1 },
-    { "-0x1000000000000000000000000000000000000000000000000", 0.0, -1, 1 },
+    {  "0x1000000000000000000000000000000000000000000000000", 1.0,  1, 1 },
+    { "-0x1000000000000000000000000000000000000000000000000", 1.0, -1, 1 },
 
     {  "0",  1e100, -1, -1 },
     {  "0", -1e100,  1, -1 },
